# cornelli

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
man/man1/: cornelli.1
src/: lib.rs  main.rs
src/cli/: args.rs  atomic.rs
src/commands/: burn.rs  keep.rs  mailbox.rs  mod.rs  path.rs
src/core/: database.rs  mod.rs
src/utils/: confirm.rs  duration.rs  io.rs  logger.rs  mod.rs  path.rs  sudo.rs
xtask/: Cargo.toml
xtask/src/: main.rs
