[package]
name = "cornelli"
description = "Write to your future self."
repository = "https://github.com/hitblast/cornelli"
readme = "README.md"
license = "MIT"
keywords = ["christmas", "time-capsule", "time-machine", "notes"]
version = "1.2.0"
edition = "2024"

[[bin]]
name = "nelli"
path = "src/main.rs"

[dependencies]
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
clap = { version = "4", features = ["derive"] }
clap_complete = "4.5.64"
anyhow = "1.0.100"
anstyle = "1.0.13"
async-trait = "0.1.89"
dialoguer = "0.12.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
chrono = { version = "0.4.42", features = ["serde"] }
aes = "0.8.4"
pbkdf2 = "0.12.2"
rand = "0.9.2"
sha2 = "0.10.9"
ctr = "0.9.2"
dirs = "6.0.0"

[workspace]
members = [".", "xtask"]

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
unreachable = "deny"
must_use_candidate = "warn"

[lints.rust]
unused_must_use = "deny"

[profile.release]
lto = "thin"
